--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ NEXTAUTH_SECRET='secret_key_for_nextauth'
 # Google OAuth Credentials
 GOOGLE_CLIENT_ID='client_id'
 GOOGLE_CLIENT_SECRET='a_secret_value'
+
+# Gemini AI API Key (for Smart Task Creation)
+GEMINI_API_KEY='your_gemini_api_key_here'
+
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
