--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@react-email/render": "^1.4.0",
     "@repo/ui": "workspace:*",
     "@types/bcrypt": "^6.0.0",
