--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_AUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
 MONGODB_URI='mongodb_connection_string'
 NEXTAUTH_SECRET='secret_key_for_nextauth'
 
