fix: Simplify vercel.json for root directory deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "buildCommand": "turbo run build --filter=web",
-  "installCommand": "pnpm install --frozen-lockfile",
-  "outputDirectory": "apps/web/.next"
+  "version": 2
 }
